--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
-    href="https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&family=Urbanist:wght@300..900&display=swap"
-    rel="stylesheet"
-  />
-  
-    <title>Priyansha Tiwari    </title>
+      href="https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&family=Urbanist:wght@300..900&display=swap"
+      rel="stylesheet"
+    />
+
+    <title>U SHIV KUMAR</title>
   </head>
   <body>
     <div id="root"></div>
